2013-04-24
* tag symbolic links, so there is no need to rely on the 'magic' attribute
anymore.
* remove use of 'magic' attribute as much as possible from the code

2013-04-23
* add reimplementation for unyaffs which should not segfault, like the current
one sometimes does.

2013-04-19
* add tag 'linuxkernel' if an ELF file has a certain section only used for the
Linux kernel

2013-04-18
* update Ubuntu + Debian configuration
* tagging 13.0

2013-04-16
* make sure PNG check does not barf on broken PNG files
* fix unpacking of romfs
* fix filter in GUI

2013-04-15
* handle blacklists in ELF files differently. This is for Linux kernels that
are distributed as ELF files and have parts of the file blacklisted (initrd).
By extracting sections and checking if only the sections are blacklisted the
check can be more fine grained.

2013-04-10
* fix return value for forges

2013-04-02
* create index for origin in processed

2013-04-01
* fix error in batchextractprogramstrings in variable name extraction.
* remove temporary directories that might have already been extracted by
cabextract

2013-03-27
* better handle newlines in output of pdfinfo

2013-03-17
* expand picture generation in findlibs.py, does not yet take WEAK symbols
into account
* prevent infinite looping in Broadcom variant of unsquashfs
* change default parameters for bat-romfsck
* fix error in gzip unpacking: too much stuff was blacklisted if offset != 0
* rewrite genericSearch so it only searches a file once for license and forge
scanning
* add per scanning phase debugging, still needs documentation

2013-03-16
* store kernel symbols (exported with EXPORT_SYMBOL*) as 'kernelsymbol'
instead of 'variable'
* update dedexer to 1.26 since it can handle ODEX files better
* add support for supplying list of rewrites to batchextractprogramstrings.py
* enable new Atheros version of unsquashfs
* prevent infinite looping in unpacking squashfs file systems for Atheros 2