@@ -2,6 +2,7 @@
 * tag symbolic links, so there is no need to rely on the 'magic' attribute
 anymore.
 * remove use of 'magic' attribute as much as possible from the code
+* search for kernel variables and print in a report. Needs more work.
 
 2013-04-23
 * add reimplementation for unyaffs which should not segfault, like the current
